# NPC-AI

./: .gitattributes  .gitignore  FINAL_BENCHMARK_REPORT.md  IEEE_FULL_PAPER.aux  IEEE_FULL_PAPER.lof  IEEE_FULL_PAPER.lot  IEEE_FULL_PAPER.out  IEEE_FULL_PAPER.toc  IEEE_FULL_PAPER_VN.aux  IEEE_FULL_PAPER_VN.lof  IEEE_FULL_PAPER_VN.lot  IEEE_FULL_PAPER_VN.out  IEEE_FULL_PAPER_VN.toc  IMPLEMENTATION_CHECKLIST.md  Modelfile  README.md  README_COLAB.md  ablation_err.txt  ablation_log.txt  ablation_log_utf8.txt  ablation_out.txt  ablation_results.json  ablation_test.json  annotation_guidelines.py  benchmark_results.json  build_log.txt  build_log_new.txt  clean_git_history.ps1  demo_npc_system.py  download (1).txt  dpo_help.txt  full_ablation_log.txt  full_pipeline.py  kill_python.ps1  mlflow.db  npc_server.py  patch_debug_cell5.py  patch_notebook.py  run_pipeline.ps1  run_server.py  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
annotation_pipeline/: README.md  __init__.py  annotation_guidelines.py  annotation_tool.py  convert_csv_to_jsonl.py  quality_control.py  requirements.txt
archive/: npc_server.py  npc_server_simple.py  test_adapter.py
augment/: filter.py  generate_scenarios.py
benchmarks/: ragas_eval.py
core/: behavior_tree.py  bert_evaluator.py  car_retriever.py  config.py  conversation_memory.py  emotion_scoring.py  emotional_state.py  episodic_memory.py  hierarchical_memory.py  inference.py  integrated_bert_system.py  llm_judge.py  memory_consolidator.py  multilanguage_support.py  neuro_symbolic_pipeline.py  prompt_builder.py  quality_metrics.py  response_controller.py
cpp/: CMakeLists.txt  INSTALL.md  README.md  ablation_log.txt  ablation_results_final.txt  build_log.txt  build_log_2.txt  build_log_brief.txt  build_output.txt  build_output_utf8.txt  cmake_log.txt  demo_npc_system.cpp  error_log.txt  latest_build_error.txt  onnx_header_snippet.txt  output.txt  pure_log.txt  test_build_log.txt  test_state.json
cpp/include/: AmbientAwarenessSystem.h  BM25Retriever.h  BehaviorTree.h  Constants.h  ConversationManager.h  EmbeddingModel.h  EmotionalContinuitySystem.h  ErrorLogger.h  FlashAttention2Integration.h  GrammarSampler.h  HalfFloat.h  HybridRetriever.h  KVCacheManager.h  MemoryConsolidator.h  ModelLoader.h  NPCInference.h  NPCLogger.h  OllamaClient.h  OrtEnvironmentManager.h  PerformanceProfiler.h  PlayerBehaviorModeling.h  PromptBuilder.h  PromptFormatter.h  PythonBridge.h  ResponseController.h  SemanticCache.h  SimpleGraph.h  SocialFabricNetwork.h  TemporalMemorySystem.h  TextChunker.h  Tokenizer.h  ToolRegistry.h  VectorStore.h  VisionLoader.h
cpp/src/: AmbientAwarenessSystem.cpp  BM25Retriever.cpp  BehaviorTree.cpp  BuildAdvancedContext.cpp  BuildSOTAContext.cpp  EmbeddingModel.cpp  EmotionalContinuitySystem.cpp  GrammarSampler.cpp  HybridRetriever.cpp  KVCacheManager.cpp  MemoryConsolidator.cpp  ModelLoader.cpp  NPCInference.cpp  OllamaClient.cpp  OrtEnvironmentManager.cpp  PerformanceProfiler.cpp  PlayerBehaviorModeling.cpp  PromptBuilder.cpp  PromptFormatter.cpp  PythonBridge.cpp  ResponseController.cpp  SemanticCache.cpp  SimpleGraph.cpp  SocialFabricNetwork.cpp  TemporalMemorySystem.cpp  Tokenizer.cpp  ToolRegistry.cpp  VectorStore.cpp  VectorStoreFallback.cpp  VisionLoader.cpp  chat_implementation.cpp.txt  chat_interface.cpp  demo_emotional_continuity.cpp  demo_integration.cpp  demo_llm_with_systems.cpp  demo_social_fabric.cpp  demo_sota_integration.cpp  demo_temporal_memory.cpp  main_cli.cpp
cpp/tests/: CMakeLists.txt  ablate_engine.cpp  ablation_suite.cpp  bench_engine.cpp  bench_memory.cpp  bench_retrieval.cpp  bench_retrieval_security.cpp  bench_state_conditioned_novelty.cpp  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  final_build_log.txt  test_async_init.cpp  test_deep_tech.cpp  test_final_system.cpp  test_grammar.cpp  test_grammar_enhanced.cpp  test_graph_rag_loop.cpp  test_header.cpp  test_inference.cpp  test_integration.cpp  test_memory_consolidator.cpp  test_multithreading.cpp  test_planner.cpp  test_reasoning_loop.cpp  test_reflection.cpp  test_response_controller.cpp  test_retrieval_guard.cpp  test_retriever_fix.cpp  test_state_persistence.cpp  test_tool_execution.cpp  test_tool_registry.cpp  test_truth_guard.cpp
data/: _tmp_diverse_check.jsonl  _tmp_diverse_check.summary.json  context_templates.json  npc_training.jsonl  npc_training_llama.txt  npc_training_v2.json  personas.json  player_utterances.json  predictions.jsonl  predictions_dpo.jsonl  proposal_eval_scenarios.jsonl  proposal_eval_scenarios_112_diverse.jsonl  proposal_eval_scenarios_112_diverse.summary.json  proposal_eval_scenarios_112_diverse_rr.jsonl  proposal_eval_scenarios_large.summary.json  proposal_eval_scenarios_large_v2.summary.json  proposal_human_eval_template.csv  retrieval_corpus.jsonl  retrieval_corpus_wide.jsonl  retrieval_corpus_wide_v2.jsonl  retrieval_gold.jsonl  retrieval_hard_negatives_wide.jsonl  retrieval_hard_negatives_wide.summary.json  retrieval_poison_benchmark.jsonl  retrieval_poison_benchmark_large.jsonl  retrieval_reranker_pairs_wide.jsonl  sample_bilingual_200.jsonl  sample_bilingual_subset.jsonl  scenarios.json  serving_prompts.jsonl  serving_prompts_wide.jsonl  serving_prompts_wide_v2.jsonl  serving_references.jsonl  serving_references_wide.jsonl  serving_references_wide_v2.jsonl  test.jsonl  test_groq.jsonl  test_state.json  train.jsonl  train_combined.jsonl  (+6 more)
docs/: ABLATION_REPORT.md  ACADEMIC_WRITING_STANDARD.md  ARCHITECTURE.md  BD-NSCA_report.md  BENCHMARK_STANDARDS.md  DRAFT_PAPER.md  DRAFT_PAPER_VN.md  FINAL_BENCHMARK_REPORT.md  HUMAN_EVAL_PIPELINE.md  IEEE_FULL_PAPER.aux  IEEE_FULL_PAPER.blg  IEEE_FULL_PAPER.lof  IEEE_FULL_PAPER.lot  IEEE_FULL_PAPER.out  IEEE_FULL_PAPER.tex  IEEE_FULL_PAPER.toc  INDUSTRY_PUBLICATION_JUDGMENT.md  KAGGLE_GUIDE.md  OQ4_COMPLETION_PLAYBOOK.md  PROPOSAL_ALIGNMENT.md  PROPOSAL_QUALITY_BAR.md  README.md  REVIEW.md  ROADMAP.md  SYSTEMATIC_REVIEW_GAME_CONFERENCE_READINESS.md  VERIFICATION.md  _arxiv_check.json  _arxiv_crossref_refresh.json  _extract.txt  (+19 more)
(+6269 files in other folders)
